All copy, styling, js, and extra pages complete. Time to spitshine! Maybe animations?

--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
         <h1 class="branding"><i class="fas fa-syringe"></i>ImmuTrack</h1>
         <ul class="nav-links">
           <a href="./index.html"><li>Home</li></a>
-          <a href="#"><li>Features</li></a>
-          <a href="#"><li>Stories</li></a>
+          <a href="./features.html"><li>Features</li></a>
+          <a href="./testimonials.html"><li>Stories</li></a>
           <a class="active" href="./about.html"><li>Our Team</li></a>
           <a class="contact" href="#">
             <li><i class="far fa-envelope"></i></li>
@@ -54,8 +54,8 @@
       </div>
       <ul class="nav-links">
         <a href="./index.html"><li>Home</li></a>
-        <a href="#"><li>Features</li></a>
-        <a href="#"><li>Stories</li></a>
+        <a href="./features.html"><li>Features</li></a>
+        <a href="./testimonials.html"><li>Stories</li></a>
         <a class="active" href="./about.html"><li>Our Team</li></a>
         <a class="contact" href="#">
           <li><i class="far fa-envelope"></i></li>
