--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1 class="branding"><i class="fas fa-syringe"></i>ImmuTrack</h1>
         <ul class="nav-links">
           <a class="active" href="./index.html"><li>Home</li></a>
-          <a href="#"><li>Features</li></a>
-          <a href="#"><li>Stories</li></a>
+          <a href="./features.html"><li>Features</li></a>
+          <a href="./testimonials.html"><li>Stories</li></a>
           <a href="./about.html"><li>Our Team</li></a>
           <a class="contact" href="#">
             <li><i class="far fa-envelope"></i></li>
@@ -54,8 +54,8 @@
       </div>
       <ul class="nav-links">
         <a class="active" href="./index.html"><li>Home</li></a>
-        <a href="#"><li>Features</li></a>
-        <a href="#"><li>Stories</li></a>
+        <a href="./features.html"><li>Features</li></a>
+        <a href="./testimonials.html"><li>Stories</li></a>
         <a href="./about.html"><li>Our Team</li></a>
         <a class="contact" href="#">
           <li><i class="far fa-envelope"></i></li>
@@ -100,43 +100,43 @@
             <h1>Less Stress</h1>
             <div class="image happy-feeling"></div>
             <p>We can help you minimize your personal workload and remove a potential hassle from your daily life by using our service for record keeping.</p>
-            <a href="#">See More</a>
+            <a href="./features.html">See More</a>
           </article>
           <article class="slide" data-tab="feature">
             <h1>More Free Time</h1>
             <div class="image accept-request"></div>
             <p>We can help you increase your efficiency during time consuming tasks, such as getting approval for travel visas.</p>
-            <a href="#">See More</a>
+            <a href="./features.html">See More</a>
           </article>
           <article class="slide" data-tab="feature">
             <h1>Improved Quality of Care</h1>
             <div class="image file-bundle"></div>
             <p>We can help you improve the quality of your care through the confidence that transparency information brings to your medical care.</p>
-            <a href="#">See More</a>
+            <a href="./features.html">See More</a>
           </article>
           <article class="slide" data-tab="feature">
             <h1>Healthy & Happy Children</h1>
             <div class="image blooming"></div>
             <p>We can help you easily maintain records for all of your children in a secure, easy-to-reach, service that can even reduce the strain of things like moving to a new provider.</p>
-            <a href="#">See More</a>
+            <a href="./features.html">See More</a>
           </article>
           <article class="slide" data-tab="feature">
             <h1>Streamlined Workflow</h1>
             <div class="image timeline"></div>
             <p>We can help you streamline your workflow through the removal of standard physical document transfer methods.</p>
-            <a href="#">See More</a>
+            <a href="./features.html">See More</a>
           </article>
           <article class="slide" data-tab="feature">
             <h1>Increased Efficiency</h1>
             <div class="image setup-wizard"></div>
             <p>We can help you increase office efficiency through the removal of extra processes and procedures.</p>
-            <a href="#">See More</a>
+            <a href="./features.html">See More</a>
           </article>
           <article class="slide" data-tab="feature">
             <h1>Greater Confidence</h1>
             <div class="image online-friends"></div>
             <p>You can improve the quality of care provided to your patients by giving them a boost of confidence through transparency.</p>
-            <a href="#">See More</a>
+            <a href="./features.html">See More</a>
           </article>
           <span class="arrow prev fas fa-chevron-circle-left" data-tab="feature"></span>
           <span class="arrow next fas fa-chevron-circle-right" data-tab="feature"></span>
@@ -151,7 +151,7 @@
               <p>Using ImmuTrack has greatly improved my quality of life!</p>
               <footer>— Guillermo Malo</footer>
             </blockquote>
-            <a href="#">See More</a>
+            <a href="./testimonials.html">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
             <div class="image">
@@ -161,7 +161,7 @@
               <p>The process is quick and painless.</p>
               <footer>— Marty Vessels</footer>
             </blockquote>
-            <a href="#">See More</a>
+            <a href="./testimonials.html">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
             <div class="image">
@@ -171,7 +171,7 @@
               <p>ImmuTrack has made things so much easier for me.</p>
               <footer>— Michaela Amadeus</footer>
             </blockquote>
-            <a href="#">See More</a>
+            <a href="./testimonials.html">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
             <div class="image">
@@ -181,7 +181,7 @@
               <p>ImmuTrack saved our wedding plans!</p>
               <footer>— Matheus Ferrari</footer>
             </blockquote>
-            <a href="#">See More</a>
+            <a href="./testimonials.html">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
             <div class="image">
@@ -191,7 +191,7 @@
               <p>Now I can’t imagine trying to handle all of this info without it.</p>
               <footer>— Han Myo When</footer>
             </blockquote>
-            <a href="#">See More</a>
+            <a href="./testimonials.html">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
             <div class="image">
@@ -201,7 +201,7 @@
               <p>It has fundamentally changed the way our practice handles vaccinations.</p>
               <footer>— Hyttalo Souzen</footer>
             </blockquote>
-            <a href="#">See More</a>
+            <a href="./testimonials.html">See More</a>
           </article>
           <article class="slide" data-tab="testimonial">
             <div class="image">
@@ -211,7 +211,7 @@
               <p>I’m so thankful to have access to ImmuTrack.</p>
               <footer>— Josh Rodrigo</footer>
             </blockquote>
-            <a href="#">See More</a>
+            <a href="./testimonials.html">See More</a>
           </article>
           <span class="arrow prev fas fa-chevron-circle-left" data-tab="testimonial"></span>
           <span class="arrow next fas fa-chevron-circle-right" data-tab="testimonial"></span>
